--- a/src/views/activity_edit.ejs
+++ b/src/views/activity_edit.ejs
@@ -91,9 +91,9 @@
                               </div>
                             </div>
 
-                            <!-- Materialien -->
+                            <!-- Material -->
                             <div class="sm:col-span-12">
-                              <label class="block text-sm font-semibold text-white">Materialien</label>
+                              <label class="block text-sm font-semibold text-white">Material</label>
                               <div class="mt-2.5 rounded-lg border border-white/10 bg-white/5 p-4">
                                 <div id="materialsContainer" class="space-y-3"></div>
 
